--- a/DooM/odamex.cfg
+++ b/DooM/odamex.cfg
@@ -126,10 +126,10 @@ set "vid_32bpp" "1"
 set "vid_fullscreen" "1"
 
 // Enable/Disable vertical refresh sync (vsync)
-set "vid_vsync" "1"
+set "vid_vsync" "0"
 
 // Maximum framerate (0 indicates unlimited framerate)
-set "vid_maxfps" "35"
+set "vid_maxfps" "150"
 
 // Force fullscreen resolution to the closest availible video mode.
 set "vid_autoadjust" "1"
@@ -180,7 +180,7 @@ set "r_particles" "1"
 set "r_drawplayersprites" "0.5"
 
 // Type of crosshair, 0 means no crosshair
-set "hud_crosshair" "2"
+set "hud_crosshair" "1"
 
 // Select between Doom and ZDoom gamma correction
 set "vid_gammatype" "0"
@@ -722,6 +722,7 @@ bind "e" "impulse 3"
 bind "f" "impulse 4"
 bind "g" "impulse 2"
 bind "m" "changeteams"
+bind "p" "toggle vid_displayfps 1"
 bind "q" "impulse 7"
 bind "r" "impulse 6"
 bind "s" "+back"
