--- a/DooM/odamex.cfg
+++ b/DooM/odamex.cfg
@@ -3,100 +3,100 @@
 // --- Console variables ---
 
 // 
-set "vid_defbits" "1"
-
-// 
-set "r_detail" "0"
-
-// 
-set "vid_winscale" "1"
-
-// 
-set "cl_skin" "Base"
-
-// 
-set "snd_timeout" "0"
-
-// 
-set "autoadjust_video_settings" "1"
-
-// 
-set "cl_weaponpref1" "1"
-
-// 
-set "cl_weaponpref2" "1"
-
-// 
-set "cl_weaponpref3" "1"
-
-// 
-set "cl_weaponpref4" "1"
-
-// 
-set "cl_weaponpref5" "1"
-
-// 
-set "cl_weaponpref6" "1"
-
-// 
-set "cl_weaponpref7" "1"
-
-// 
-set "cl_weaponpref8" "0"
-
-// 
-set "cl_weaponpref9" "1"
-
-// 
-set "displaymouse" "0"
-
-// 
-set "sv_allownobob" "1"
-
-// 
-set "cl_nobob" "1"
-
-// 
-set "filecompression" "1"
-
-// 
-set "con_scaletext" "1"
-
-// 
-set "hud_usehighresboard" "1"
-
-// 
-set "snd_nomusic" "0"
-
-// 
-set "interscoredraw" "1"
-
-// 
-set "r_widescreen" "1"
-
-// 
-set "cl_pngscreenshots" "1"
-
-// 
-set "co_zdoomsoundcurve" "1"
-
-// 
-set "co_zdoomswitches" "1"
-
-// 
-set "co_level8soundfeature" "0"
-
-// 
-set "co_boomsectortouch" "0"
-
-// 
-set "co_boomlinecheck" "1"
+set "r_columnmethod" "1"
 
 // 
 set "co_fixzerotags" "0"
 
 // 
-set "r_columnmethod" "1"
+set "co_boomlinecheck" "1"
+
+// 
+set "co_boomsectortouch" "0"
+
+// 
+set "co_level8soundfeature" "0"
+
+// 
+set "co_zdoomswitches" "1"
+
+// 
+set "co_zdoomsoundcurve" "1"
+
+// 
+set "cl_pngscreenshots" "1"
+
+// 
+set "r_widescreen" "1"
+
+// 
+set "interscoredraw" "1"
+
+// 
+set "snd_nomusic" "0"
+
+// 
+set "hud_usehighresboard" "1"
+
+// 
+set "con_scaletext" "1"
+
+// 
+set "filecompression" "1"
+
+// 
+set "cl_nobob" "1"
+
+// 
+set "sv_allownobob" "1"
+
+// 
+set "displaymouse" "0"
+
+// 
+set "cl_weaponpref9" "1"
+
+// 
+set "cl_weaponpref8" "0"
+
+// 
+set "cl_weaponpref7" "1"
+
+// 
+set "cl_weaponpref6" "1"
+
+// 
+set "cl_weaponpref5" "1"
+
+// 
+set "cl_weaponpref4" "1"
+
+// 
+set "cl_weaponpref3" "1"
+
+// 
+set "cl_weaponpref2" "1"
+
+// 
+set "cl_weaponpref1" "1"
+
+// 
+set "autoadjust_video_settings" "1"
+
+// 
+set "snd_timeout" "0"
+
+// 
+set "cl_skin" "Base"
+
+// 
+set "vid_winscale" "1"
+
+// 
+set "r_detail" "0"
+
+// 
+set "vid_defbits" "1"
 
 // 
 set "configver" "70"
@@ -165,7 +165,7 @@ set "r_forceteamcolor" "0"
 set "r_enemycolor" "00 ff 00"
 
 // Changes the color of all enemies to the color specified by r_enemycolor
-set "r_forceenemycolor" "0"
+set "r_forceenemycolor" "1"
 
 // Invulnerability sphere changes the palette of the sky
 set "r_skypalette" "0"
@@ -718,20 +718,18 @@ bind "a" "+left2"
 bind "b" "say_team I Am At Middle!"
 bind "c" "say_team I Got Your Back!"
 bind "d" "+right2"
-bind "e" "impulse 3"
-bind "f" "impulse 4"
-bind "g" "impulse 2"
+bind "e" "ssg"
+bind "f" "cg"
 bind "m" "changeteams"
 bind "p" "toggle vid_displayfps 1"
-bind "q" "impulse 7"
-bind "r" "impulse 6"
+bind "q" "bfg"
+bind "r" "plasma"
 bind "s" "+back"
 bind "t" "messagemode"
 bind "v" "say_team Running The Flag!"
 bind "w" "+forward"
 bind "x" "say_team Armor/Sphere available!!!"
 bind "y" "messagemode2"
-bind "z" "toggle r_drawplayersprites 1"
 bind "rightarrow" "+right"
 bind "leftarrow" "+left"
 bind "f1" "vote_yes"
@@ -747,16 +745,18 @@ bind "f11" "bumpgamma"
 bind "f12" "spynext"
 bind "capslock" "toggle cl_run"
 bind "leftshift" "+sr"
-bind "leftalt" "impulse 1"
+bind "leftalt" "pistol"
 bind "print" "screenshot"
 bind "mouse1" "+attack"
 bind "mouse2" "+use"
-bind "mouse4" "impulse 5"
+bind "mouse3" "say :o"
+bind "mouse4" "rl"
 bind "mwheelup" "weapprev"
 bind "mwheeldown" "weapnext"
 bind "joy1" "+attack"
 bind "joy3" "+speed"
 bind "mouse5" "toggle cl_mouselook"
+doublebind "leftalt" "fist"
 
 // --- Aliases ---
 
@@ -767,3 +767,10 @@ alias "-left2" "-left\;-moveleft"
 alias "-right2" "-right\;-moveright"
 alias "-sr" "turnspeeds 0\;-strafe"
 alias "?" "help"
+alias "bfg" "impulse 1\;cl_mouselook 0\;cl_autoaim 5000\;echo Mouselook Off"
+alias "cg" "impulse 4\;cl_mouselook 0\;cl_autoaim 5000\;echo Mouselook Off"
+alias "fist" "impulse 1\;cl_mouselook 0\;cl_autoaim 5000\;echo Mouselook Off"
+alias "pistol" "impulse 2\;cl_mouselook 0\;cl_autoaim 5000\;echo Mouselook Off"
+alias "plasma" "impulse 6\;cl_mouselook 1\;cl_autoaim 0\;echo Mouselook On"
+alias "rl" "impulse 5\;cl_mouselook 1\;cl_autoaim 0 \;echo Mouselook On"
+alias "ssg" "impulse 3\;cl_mouselook 0\;cl_autoaim 5000\;echo Mouselook Off"
